# nginx-proxy-manager-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  env.example  pyproject.toml
.github/workflows/: docker.yml  test.yml
docs/: feature-request-log-api.md
src/npm_mcp/: __init__.py  client.py  config.py  exceptions.py  logs.py  main.py  models.py  server.py
tests/: __init__.py  test_client.py  test_config.py  test_logs.py  test_registry.py  test_server_tools.py
